--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "professional-readme-generator.-nodejs",
+  "version": "1.0.0",
+  "description": "[How to create a Professional README](https://coding-boot-camp.github.io/full-stack/github/professional-readme-guide) # Professional-README-generator.-NodeJS",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC", 
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "inquirer": "8.2.4"
   }
 }
